<resources>
    <string name="app_name">Chat</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="csc480_capstone">CSC480 Capstone</string>
    <string name="firebase_chat">Firebase Chat</string>
    <string name="kyle_king">Kyle King</string>
    <string name="register">Register</string>
    <string name="switch_to_login">Switch to Login</string>
    <string name="register_a_new_account">Register a New Account</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="search_users">Search Users</string>
    <string name="back_button">Back Button</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="message_hint">Message…</string>
    <string name="new_conversation">New Conversation</string>
    <string name="send_button">Send message button</string>
</resources>