<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Login"

    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/csc480_capstone"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/firebase_chat"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/kyle_king"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- email text input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- password text input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- login button -->
    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- switch text -->
    <TextView
        android:id="@+id/switch_to_register"
        android:text="@string/register_a_new_account"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>