<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Register"

    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <!-- app title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/csc480_capstone"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:text="@string/firebase_chat"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/kyle_king"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- register text -->
    <TextView
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- email text layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- email text input field -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- username text layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- username text input field -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- password text layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- password text input field -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- register button -->
    <Button
        android:id="@+id/register_button"
        android:text="@string/register"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- switch to login text -->
    <TextView
        android:id="@+id/switch_to_login"
        android:text="@string/switch_to_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>