<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity"
    android:orientation="horizontal">
    
    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="10dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebase_chat"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true" />
        
        <ImageButton
            android:id="@+id/search_button"
            android:contentDescription="@string/search_users"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/search_24"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="40dp" />

        <ImageButton
            android:id="@+id/logout_button"
            android:contentDescription="@string/logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/logout_24"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_conversations_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</RelativeLayout>