<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SearchUsers">

    <RelativeLayout
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_users"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_button"/>

        <ImageButton
            android:id="@+id/back_button"
            android:contentDescription="@string/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_24"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/search_toolbar" >

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/search_users_button"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/username"/>

        <ImageButton
            android:id="@+id/search_users_button"
            android:contentDescription="@string/search_users"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/search_24"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_layout"
        android:padding="10dp"
        />

</RelativeLayout>